--- a/style2.css
+++ b/style2.css
@@ -28,7 +28,7 @@
     background-color: white;
     border: 2px solid black;
     text-align: center;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px;
   }
 
   .headerBox {
@@ -449,6 +449,8 @@
     display: flex;
     justify-content: left;
     flex-wrap: wrap;
+    margin-left: 160px;
+    
   }
 
   .inner-box1 {
@@ -470,7 +472,7 @@
 
   .box23 {
     width: 1150px;
-    height: 1000px;
+    height: 500px;
     display: flex;
     justify-content: left;
     flex-wrap: wrap;
@@ -501,9 +503,16 @@
       }
 
       #top-image {
-        width: 20px;
-        height: 10px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
     }
+
+    .bottom-row img {
+      width: 24%;
+      
+  }
 
    /* img {
         overflow-clip-margin: content-box;
