--- a/style2.css
+++ b/style2.css
@@ -253,6 +253,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 60%;
+  
     
   }
 
@@ -382,7 +383,7 @@
   }
 
   .inner-box {
-    width: 120px;
+    width: 145px;
     height: 70px;
     background-color: white;
     border: 2px solid black;
@@ -544,3 +545,15 @@
       }
 
 /* ........................................ */
+
+
+#pdf-container {
+  margin-top: 20px;
+  display: none;
+}
+
+#pdf-container iframe {
+  width: 100%;
+  height: 500px;
+  border: none;
+}
