--- a/style2.css
+++ b/style2.css
@@ -588,7 +588,8 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 40%;
+        /* width: 40%; */
+        height: 10%;
       }
       .name {
         display: block;
@@ -596,7 +597,8 @@
       }
 
     .bottom-row img {
-      width: 24%;
+      width: 25%;
+      height: 100px;
       
   }
 
