--- a/style2.css
+++ b/style2.css
@@ -87,6 +87,7 @@
     margin: 10px;
     /* width: 100%; */
     /* height: 100px; */
+    align-items: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -239,16 +240,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 20px 0;
+    margin: 10px 0;
   }
 
-  .column {
-    flex: 1;
-    padding: 5px;
-    /* float: center;
-    justify-content: center; */
+  .row .column {
+    padding: 3px;
+    float: center;
+    justify-content: center;
     justify-items: center;
-    /* width: 25%; */
+    width: 23%;
+    height: 110%;
     /* margin-bottom: 2px; */
     /* padding: 0 8px; */
   }
@@ -590,7 +591,7 @@
       width: 90%;
       }
 
-      .top-image {
+      #top-image {
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -603,9 +604,8 @@
       }
 
     .bottom-row img {
-      width: 25%;
-      height: 100px;
-      
+      width: 40%;
+      height: 200px; 
   }
 
    /* img {
